<resources>
    <string name="app_name">City Guide</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_1">LOGIN FACEBOOK</string>
    <string name="menu_item_2">HELP</string>
    <string name="menu_item_3">SETTINGS</string>
    <string name="menu_item_4">LOGIN GOOGLE</string>
    <string name="menu_legal">LEGAL</string>
    <string name="menu_version">v1.0000</string>
    <string name="tab_rest">RESTAURANTS</string>
    <string name="tab_hotel">HOTELS</string>
    <string name="tab_parking">PARKING</string>
    <string name="tab_eventos">EVENTS</string>
    <string name="tab_more">MORE</string>
    <string name="tab_church">CHURCH</string>
    <string name="more_time">MASS TIMES</string>
    <string name="more_shopping">SHOPPING</string>
    <string name="more_arrraction">ATTRACTIONS</string>
    <string name="more_coffee_shop">COFFEE SHOPS</string>
    <string name="more_arrive">HOW TO ARRIVE</string>
    <string name="more_travel">TRAVEL AGENCIES</string>
    <string name="more_emergencies">EMERGENCIES</string>
    <string name="more_contact">CONTACT US</string>
    <string name="menu_spain">Spanish</string>
    <string name="menu_english">English</string>
    <string name="menu_title">VISITABUGA</string>
    <string name="menu_string">""</string>

    <string name="home_welcome">Welcome to</string>
    <string name="home_buga">BUGA</string>
    <string name="home_colom">COLOMBIA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_recommend">RECOMMENDED</string>
    <string name="legal">Legal Notices</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="map_page_title">Map #</string>
    <string name="un">UN</string>
    <string name="united_nations">United Nations</string>
    <string name="lincoln_center">Lincoln Center</string>
    <string name="lincoln_center_snippet">Home of Jazz at Lincoln Center</string>
    <string name="carnegie_hall">Carnegie Hall</string>
    <string name="practice_x3">Where you go with practice, practice, practice</string>
    <string name="downtown_club">The Downtown Club</string>
    <string name="heisman_trophy">Original home of the Heisman Trophy</string>
    <string name="str_mass_time">MASS TIMES</string>
    <string name="str_shopping">SHOPPING</string>
    <string name="str_attraction">ATTRACTIONS</string>
    <string name="str_coffee_shop">COFFEE SHOPS</string>
    <string name="str_how_to_arrive">HOW TO ARRIVE</string>
    <string name="str_travel_agenci">TRAVEL AGENCIES</string>
    <string name="str_emergencies">EMERGENCIES</string>
    <string name="str_contact_us">CONTACT US</string>
    <string name="str_upcoming">Upcoming Mass</string>
    <string name="str_search_by_church">SEARCH BY CHURCH</string>
    <string name="str_search">SEARCH</string>
    <string name="str_mon">Monday</string>
    <string name="str_tue">Tuesday</string>
    <string name="str_wed">Wednesday</string>
    <string name="str_thu">Thursday</string>
    <string name="str_fri">Friday</string>
    <string name="str_sat">Saturday</string>
    <string name="str_sun">Sunday</string>
    <string name="facebook_app_id">1875914369352934</string>
    <string name="str_current_open">CURRENTLY OPEN </string>
    <string name="str_will_open">CURRENTLY CLOSED </string>
    <string name="str_loading">Loading...</string>
    <string name="facebook_logout">LogOut Facebook</string>
    <string name="request_login">Please Login Facebook or Google</string>
    <string name="no_result">No Result</string>
    <string name="closed">Closed</string>
    <string name="google_logout">LOGOUT GOOGLE</string>
    <string name="email_error">Email is not valid!</string>
    <string name="phone_error">PhoneNumber is not valid!</string>
    <string name="name_error">name is empty!</string>
    <string name="message_error">Message is empty!</string>
    <string name="no_information">No detail information</string>
    <string name="holiday">Holiday</string>
    <string name="user_rate">How likely would you recommend this place to someone else?</string>
    <string name="str_low">Unlike</string>
    <string name="str_high">Like</string>
    <string name="user_comment">Please tell us why you gave this rating:</string>
    <string name="str_give_rate">submit</string>
    <string name="avarage_rating">Avarage rating</string>
    <string name="comment">Comment</string>
    <string name="no_image">No Image</string>
    <string name="welcome_submit_feedback">Thank you for submitting feedback</string>
    <string name="feedback_title">Feedback Submitted</string>
    <string name="str_ok">OK</string>


    <string name="already_rate">You rated already this object.</string>
    <string name="rating">Rating</string>
    <string name="text_limit">You are on text limit 100 characters.</string>
    <string name="event_message">Coming soon</string>

</resources>
