<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/layout_color_1"
    tools:context="krt.com.cityguide.Fragments.EventsSubFragments.ObjectDetailFourFragment">


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text = "@string/avarage_rating"
        android:textSize="16sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="wrap_content" />

    <krt.com.cityguide.custom.CustomRatingBar
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar1"
        app:starOn="@drawable/rating_on_1"
        app:starOff="@drawable/rating_off"
        android:scaleX=".7"
        android:scaleY=".7"
        app:stars="5"

        android:foregroundGravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="200dp">

        <TextView
            android:text="@string/str_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/textView25"
            android:textColor="@android:color/white"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:text="@string/str_high"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:id="@+id/textView24"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_weight=".1"

        android:layout_height="wrap_content" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView22" />

</LinearLayout>
