<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="krt.com.cityguide.Fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/imageView3"
            android:layout_alignParentTop="true"
            android:alpha="0.65"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="110dp"
            >

            <TextView
                android:text="@string/home_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:id="@+id/textView6" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/home_buga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_marginRight="10dp"

                    android:textColor="@color/highlight_color"
                    android:textSize="40sp"
                     />

                <TextView
                    android:text="@string/home_colom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:id="@+id/textView8"
                    android:textSize="25sp"
                     />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
